--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/_Imports.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using CryptoLink.WebUI
 @using CryptoLink.WebUI.Client
 @using CryptoLink.WebUI.Components
+
+@using CryptoLink.WebUI.Client.Pages.Auth
