--- a/CryptoLink.WebUI/CryptoLink.WebUI.Client/_Imports.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI.Client/_Imports.razor
@@ -3,7 +3,13 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+
 @using CryptoLink.WebUI.Client
+@using CryptoLink.WebUI.Client.Pages
+@using CryptoLink.WebUI.Client.Services
