--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/MainLayout.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/MainLayout.razor
@@ -1,19 +1,59 @@
-﻿@inherits LayoutComponentBase
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inherits LayoutComponentBase
+@inject NavigationManager navigationManager
 
 <div class="page">
+
     <div class="sidebar">
         <NavMenu />
     </div>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+
+    <main class="main-container">
+        <div class="top-row px-4 header" style="background-color: #046287;">
+            <AuthorizeView>
+                <NotAuthorized>
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link btn btn-primary btn-lg shadow-lg" href="login">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Login
+                        </NavLink>
+                    </div>
+                    <div class="nav-item px-3">
+                        <button class="dropdown-item nav-link" @onclick="Register" style="cursor: pointer;">
+                            <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Register
+                        </button>
+                        <NavLink class="nav-link btn btn-primary btn-lg shadow-lg" href="register">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Register
+                        </NavLink>
+                    </div>
+                </NotAuthorized>
+
+                <Authorized>
+                    <div style="display: flex; justify-content: flex-start; margin-right: 2cm;">
+                        <div class="dropdown" style="margin-left: 20px;">
+                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                Konto
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+
+                                <li>
+                                    <button class="dropdown-item nav-link" @onclick="Logout" style="cursor: pointer;">
+                                        <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Wyloguj się
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </Authorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
             @Body
         </article>
     </main>
+
+
 </div>
 
 <div id="blazor-error-ui">
@@ -21,3 +61,16 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
+
+@code {
+    private void Register()
+    {
+        navigationManager.NavigateTo("/register");
+    }
+
+    private void Logout()
+    {
+        navigationManager.NavigateTo("/logout", forceLoad: true);
+    }
+}
