--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/NavMenu.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/NavMenu.razor
@@ -1,35 +1,35 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">CryptoLink.WebUI</a>
+        <a class="navbar-brand" href="">Crypto Link</a>
     </div>
 </div>
 
+
+
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
+
+
+
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <Authorized>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Links">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Stwóz Link
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="Links">
+                        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Twoje Linki
+                    </NavLink>
+                </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="register">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Register
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="login">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Login
-            </NavLink>
-        </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
 
