--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/NavMenu.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/NavMenu.razor
@@ -18,12 +18,12 @@
             <Authorized>
 
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Links">
+                    <NavLink class="nav-link" href="CreateLink">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Stwóz Link
                     </NavLink>
                 </div>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="Links">
+                    <NavLink class="nav-link" href="ListLink">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Twoje Linki
                     </NavLink>
                 </div>
