--- a/CryptoLink.WebUI/CryptoLink.WebUI.Client/Pages/Auth/Login.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI.Client/Pages/Auth/Login.razor
@@ -1,31 +1,34 @@
-﻿@page "/login"
+﻿@page "/Login"
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 @inject AuthService AuthService
 @inject NavigationManager Navigation
 
 <h3>Logowanie PGP</h3>
 
-@if (step == 1)
-{
-    <div class="card p-3">
+<div class="card p-3">
+    @if (step == 1)
+    {
         <label>Nazwa użytkownika</label>
         <input @bind="username" class="form-control mb-2" placeholder="Wpisz swój nick" />
         <button class="btn btn-primary" @onclick="HandleInit">Zaloguj</button>
-    </div>
-}
-else if (step == 2)
-{
-    <div class="alert alert-warning">
-        <strong>Zadanie:</strong> Odszyfruj poniższą wiadomość swoim kluczem prywatnym.
-    </div>
 
-    <div class="form-group">
-        <textarea readonly class="form-control mb-2" rows="5" value="@encryptedMessage"></textarea>
-    </div>
+    }
+    else if (step == 2)
+    {
 
-    <div class="form-group">
-        <label>Odszyfrowana treść:</label>
-        <input @bind="decryptedToken" class="form-control mb-2" placeholder="Wklej wynik tutaj" />
-        <button class="btn btn-success" @onclick="HandleVerify">Potwierdź tożsamość</button>
-    </div>
-}
+            <div class="alert alert-warning">
+                <strong>Zadanie:</strong> Odszyfruj poniższą wiadomość swoim kluczem prywatnym.
+            </div>
+
+            <div class="form-group">
+                <textarea readonly class="form-control mb-2" rows="5" value="@encryptedMessage"></textarea>
+            </div>
+
+            <div class="form-group">
+                <label>Odszyfrowana treść:</label>
+                <input @bind="decryptedToken" class="form-control mb-2" placeholder="Wklej wynik tutaj" />
+                <button class="btn btn-success" @onclick="HandleVerify">Potwierdź tożsamość</button>
+            </div>
+
+    }
+</div>
