--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/MainLayout.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/Layout/MainLayout.razor
@@ -27,6 +27,11 @@
 
                 <Authorized>
 
+                    <div class="nav-item px-3">
+                        <NavLink class="nav-link btn btn-primary btn-lg shadow-lg" href="Logout">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Wyloguj się
+                        </NavLink>
+                    </div>
                     <li>
                         <button class="dropdown-item nav-link" @onclick="Logout" style="cursor: pointer;">
                             <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> Wyloguj się
