loading internet site
if you active extented Link is working

--- a/CryptoLink.WebUI/CryptoLink.WebUI/Components/Pages/Home.razor
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/Components/Pages/Home.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Crypto Link - Prestiż w każdym bajcie</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="text-center mt-5">
+    <h1 class="display-4">Więcej znaczy lepiej.</h1>
+    <p class="lead">
+        W świecie, gdzie wszyscy skracają, Ty bądź wielki.
+        Odzyskaj dominację nad paskiem adresu przeglądarki.
+    </p>
+    <hr class="my-4">
+    <p>
+        Krótkie linki są podejrzane i tanie. Nasz algorytm <strong>Wydłużania™</strong>
+        zamieni Twój krótki URL w majestatyczny ciąg znaków, którego nikt nie odważy się zignorować.
+    </p>
+    <p>
+        <em>Ponieważ rozmiar ma znaczenie.</em>
+    </p>
 
-Welcome to your new app.
+</div>
